--- a/TailwindCss/output.css
+++ b/TailwindCss/output.css
@@ -535,21 +535,22 @@ video {
   position: relative;
 }
 
-.left-0 {
-  left: 0px;
-}
-
-.right-0 {
-  right: 0px;
-}
-
 .-right-96 {
   right: -24rem;
+}
+
+.left-0 {
+  left: 0px;
 }
 
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .my-10 {
@@ -567,11 +568,6 @@ video {
   margin-bottom: 1.5rem;
 }
 
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -582,6 +578,10 @@ video {
 
 .mt-4 {
   margin-top: 1rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
 .flex {
@@ -600,48 +600,28 @@ video {
   width: 16.666667%;
 }
 
-.w-5\/6 {
-  width: 83.333333%;
-}
-
-.w-64 {
-  width: 16rem;
+.w-2\/3 {
+  width: 66.666667%;
 }
 
 .w-96 {
   width: 24rem;
 }
 
-.w-full {
-  width: 100%;
-}
-
-.w-\[500px\] {
-  width: 500px;
-}
-
 .w-\[600px\] {
   width: 600px;
 }
 
-.w-1 {
-  width: 0.25rem;
+.w-full {
+  width: 100%;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
+.w-\[\] {
+  width: ;
 }
 
-.w-2\/3 {
-  width: 66.666667%;
-}
-
-.flex-row {
-  flex-direction: row;
-}
-
-.flex-row-reverse {
-  flex-direction: row-reverse;
+.w-\[500px\] {
+  width: 500px;
 }
 
 .flex-col {
@@ -650,10 +630,6 @@ video {
 
 .items-center {
   align-items: center;
-}
-
-.justify-start {
-  justify-content: flex-start;
 }
 
 .justify-end {
@@ -686,6 +662,10 @@ video {
 
 .overflow-x-auto {
   overflow-x: auto;
+}
+
+.overflow-x-scroll {
+  overflow-x: scroll;
 }
 
 .rounded-lg {
@@ -797,6 +777,11 @@ video {
   padding-bottom: 1.5rem;
 }
 
+.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
 .pr-6 {
   padding-right: 1.5rem;
 }
@@ -824,6 +809,11 @@ video {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-lg {
@@ -939,6 +929,22 @@ video {
   left: -15px;
 }
 
+.swiper-pagination-bullet {
+  width: 13px;
+  border-radius:  50%;
+  height: 13px;
+  background: transparent;
+  border: 2px solid #1943da;
+  opacity: 1;
+}
+
+.swiper-pagination-bullet-active {
+  width: 35px;
+  height: 13px;
+  border-radius: 10px;
+  background-color: #1943da;
+}
+
 .placeholder\:text-sm::-moz-placeholder {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -992,26 +998,7 @@ video {
     width: 100%;
   }
 
-  .md\:w-64 {
-    width: 16rem;
-  }
-
   .md\:justify-start {
     justify-content: flex-start;
   }
-
-  .md\:justify-end {
-    justify-content: flex-end;
-  }
 }
-
-@media (min-width: 1024px) {
-  .lg\:right-0 {
-    right: 0px;
-  }
-
-  .lg\:w-5\/6 {
-    width: 83.333333%;
-  }
-}
-
