--- a/TailwindCss/output.css
+++ b/TailwindCss/output.css
@@ -827,6 +827,16 @@ video {
   padding-bottom: 1.75rem;
 }
 
+.py-9 {
+  padding-top: 2.25rem;
+  padding-bottom: 2.25rem;
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 .pl-2 {
   padding-left: 0.5rem;
 }
